# OpusDownloader

./: .gitignore  LICENSE  README.md  pyproject.toml
opusdownloader/: __init__.py
sgithidownloader/: __init__.py  audio.py  shared.py  video.py
